<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_header_txt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/new_group"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/group_name"
        android:inputType="textAutoComplete"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/group_private_cbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/makeprivate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_photo"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <android.support.v7.widget.CardView
            android:id="@+id/media_photo_btn"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/choose_file"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/media_photo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/dialog_create_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

</LinearLayout>