<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_header_txt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/new_doc"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/doc_name"
        android:inputType="textAutoComplete"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/dialog_create_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

</LinearLayout>