<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_user" />

        <EditText
            android:id="@+id/user_name_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/fullname"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_email" />

        <EditText
            android:id="@+id/user_email_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_phone" />

        <EditText
            android:id="@+id/user_phone_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_user" />

        <EditText
            android:id="@+id/user_username_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/bg_form_text"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_password" />

        <EditText
            android:id="@+id/user_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/bg_form_text"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/bg_form_icon"
            android:padding="10dp"
            android:src="@drawable/ic_action_password" />

        <EditText
            android:id="@+id/user_confirm_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/bg_form_text"
            android:gravity="center|start"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/socialup"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fb_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/twitter_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/twiter" />

        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/gplus" />
    </LinearLayout>


</LinearLayout>
