<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forget_text"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/bg_form_icon"
                android:padding="10dp"
                android:src="@drawable/ic_action_user" />

            <EditText
                android:id="@+id/user_email_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_form_text"
                android:gravity="center|start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/reset_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>


    </LinearLayout>

</RelativeLayout>